--- a/hello-spring-cloud-web-admin-ribbon/src/main/resources/application.yml
+++ b/hello-spring-cloud-web-admin-ribbon/src/main/resources/application.yml
@@ -1,16 +1,11 @@
 spring:
+  profiles:
+    active: dev
   application:
     name: hello-spring-cloud-web-admin-ribbon
-  thymeleaf:
-    cache: false
-    mode: LEGACYHTML5
-    encoding: UTF-8
-    servlet:
-      content-type: text/html
-server:
-  port: 8764
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/
+  cloud:
+    config:
+      uri: http://localhost:8888
+      name: ${spring.application.name}
+      label: master
+      profile: dev
