--- a/hello-spring-cloud-zuul/src/main/resources/application.yml
+++ b/hello-spring-cloud-zuul/src/main/resources/application.yml
@@ -1,21 +1,9 @@
 spring:
   application:
     name: hello-spring-cloud-zuul
-
-server:
-  port: 8769
-
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/
-
-zuul:
-  routes:
-    api-a:
-      path: /api/r/**
-      serviceId: hello-spring-cloud-web-admin-ribbon
-    api-b:
-      path: /api/f/**
-      serviceId: hello-spring-cloud-web-admin-feign
+  cloud:
+    config:
+      uri: http://localhost:8888
+      name: ${spring.application.name}
+      label: master
+      profile: dev
